force-app/main/default/objects/SVMXA360__SM_TA_TechnicalAttribute__c/SVMXA360__SM_TA_TechnicalAttribute__c.object-meta.xml
<CustomObject>
    <description>This object is used to store technical attributes.</description>
    <label>Technical Attribute</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technical Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>