force-app/main/default/objects/SVMXA360__SM_TA_TechnicalAttribute__c/fields/SVMXA360__DataType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DataType__c</fullName>
    <description>Data type of the Attribute value. Supported datatypes are Text, Number, Picklist, Date, Datetime, Boolean.</description>
    <inlineHelpText>Data type of the Attribute value. Supported datatypes are Text, Number, Picklist, Date, Datetime, Boolean.</inlineHelpText>
    <label>Data Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__DataType</valueSetName>
    </valueSet>
</CustomField>