force-app/main/default/objects/SVMXA360__SM_TA_TechnicalAttribute__c/fields/SVMXA360__Description__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Description__c</fullName>
    <description>Description of the Attribute.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description of the Attribute.</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>