force-app/main/default/objects/SVMXA360__SM_TA_TechnicalAttribute__c/fields/SVMXA360__IsReadonly__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__IsReadonly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this attribute is read-only</description>
    <inlineHelpText>Indicates if this attribute is read-only</inlineHelpText>
    <label>Is Readonly</label>
    <type>Checkbox</type>
</CustomField>