force-app/main/default/objects/SVMXA360__SM_TA_TechnicalAttribute__c/fields/SVMXA360__MaximumValue__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaximumValue__c</fullName>
    <description>Holds the maximum value for this number attribute</description>
    <inlineHelpText>Holds the maximum value for this number attribute</inlineHelpText>
    <label>Maximum Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>