force-app/main/default/objects/SVMXA360__SM_TA_TechnicalAttribute__c/fields/SVMXA360__PicklistDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PicklistDefinitionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Id of the Picklist Definition referenced in the attribute</description>
    <inlineHelpText>Stores the Id of the Picklist Definition referenced in the attribute</inlineHelpText>
    <label>Picklist Definition</label>
    <referenceTo>SVMXA360__CONF_PicklistDefinition__c</referenceTo>
    <relationshipLabel>Technical Attributes</relationshipLabel>
    <relationshipName>TechnicalAttributes</relationshipName>
    <type>Lookup</type>
</CustomField>