force-app/main/default/objects/SVMXA360__SM_TA_TechnicalAttribute__c/fields/SVMXA360__Unit__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Unit__c</fullName>
    <description>Unit of measurement of the attribute</description>
    <inlineHelpText>Unit of measurement of the attribute</inlineHelpText>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__Unit</valueSetName>
    </valueSet>
</CustomField>