force-app/main/default/objects/SVMXA360__SM_TA_TechnicalAttribute__c/listViews/SVMXA360__AllTechnicalAttributes.listView-meta.xml
<ListView>
    <fullName>SVMXA360__AllTechnicalAttributes</fullName>
    <columns>NAME</columns>
    <columns>SVMXA360__DataType__c</columns>
    <columns>SVMXA360__DefaultValue__c</columns>
    <columns>SVMXA360__IsReadonly__c</columns>
    <columns>SVMXA360__IsRequired__c</columns>
    <columns>SVMXA360__MaximumValue__c</columns>
    <columns>SVMXA360__MinimumValue__c</columns>
    <columns>SVMXA360__Message__c</columns>
    <columns>SVMXA360__Unit__c</columns>
    <columns>SVMXA360__PicklistDefinitionId__c</columns>
    <columns>SVMXA360__HelpText__c</columns>
    <filterScope>Everything</filterScope>
    <label>A360 - All Technical Attributes</label>
</ListView>